# LightRAG

./: .env.local  .gitignore  APOLO.md  DEPLOYMENT_FILES.md  FIXED_SETUP_GUIDE.md  Makefile  README-providers.md  README.md  README_TESTING.md  README_load_docs.md  REPORT.md  Report.md  SECURITY_CLEANUP.md  SETUP_SUMMARY.md  STACK_CONFIGURATIONS.md  deploy-stacks.sh  docker-compose.cost-effective.yml  docker-compose.full.yml  docker-compose.minimal.yml  docker-compose.providers.yml  hooks.Dockerfile  load_docs.py  pyproject.toml  quick_test.py  setup_env.py  setup_storage.py  start_full_stack.sh  start_postgres.sh
.apolo/src/apolo_apps_lightrag/: inputs_processor.py  outputs_processor.py  types.py
.apolo/src/apolo_apps_lightrag/schemas/: LightRAGAppInputs.json  LightRAGAppOutputs.json
.apolo/tests/: conftest.py
.apolo/tests/unit/: test_inputs_processor.py  test_inputs_processor_variants.py  test_outputs_processor.py
.claude/: settings.local.json
.github/workflows/: ci.yaml
apolo-copilot/: PROJECT_STATUS.md  README.md  load_docs.py  requirements.txt
apolo-copilot/config/: settings.py
apolo-copilot/src/: __init__.py  main.py
apolo-copilot/src/data/: __init__.py  loader.py
apolo-copilot/src/retrieval/: __init__.py  lightrag_client.py
assets/: apolo-documentation.md
blueprints/: Brainstorming.md  KUBERNETES_DEPLOYMENT.md  PLAN.md  PlanProgress.md
init-scripts-cost-effective/: init-extensions.sql
k8s-deploy/: deploy-minimal.sh  values-minimal.yaml
k8s-deploy/lightrag-minimal/: README.md  values-dev.yaml  values-prod.yaml  values.yaml
k8s-deploy/lightrag-minimal/templates/: NOTES.txt  deployment.yaml  ingress.yaml  secret.yaml
k8s-deploy/lightrag/templates/: _helpers.tpl
lightrag/evaluation/: eval_rag_quality.py
mongo-init-aio/: init-user.js
